# healerrag

./: .gitignore  AGENTS.md  Dockerfile.backend  docker-compose.services.yml  docker-compose.yml
backend/: AGENTS.md  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1d7b6141c8fd_initial_schema.py  20260415_0001_add_agentic_sessions.py
backend/app/: main.py
backend/app/api/: chat_agent.py  chat_prompt.py  config.py  documents.py  rag.py  router.py  workspaces.py
backend/app/core/: config.py  database.py  deps.py
backend/app/models/: __init__.py  agentic_session.py  document.py  knowledge_base.py
backend/app/schemas/: document.py  rag.py
backend/app/services/: agentic_rag_service.py  chunk_dedup.py  deep_retriever.py  rag_service.py  reranker.py  vector_store.py
backend/app/services/agentic/: __init__.py  context_budget_manager.py  models.py  (+12 more)
backend/tests/agentic/: test_analyzer_planner.py  test_context_budget_manager.py  test_continuation_manager.py  test_models.py  test_observability_eval.py  test_orchestrator.py  test_parallel_retrieval.py  test_sufficiency_rewriter.py  test_synthesizer_response_judge.py  test_web_search_tool.py
backend/tests/download/: README.md  docling_parser.py  marker_parser.py  v1_marker_document_parser_env_cache_fix.py  v1_vietnamese_ocr.py  v2_marker_document_parser_langs_batch.py  v2_table_fix.py
backend/tests/marker_parser_versions/: LOGO_EXTRACTION_GUIDE.md  README.md  v0_marker_document_parser_baseline_reconstructed.py  v3_marker_document_parser_auto_profile_force_ocr.py
(+39 files in other folders)
