[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "chromadb>=0.4.22",
    "docling>=2.0.0",
    "fastapi>=0.104.0",
    "google-genai>=1.0.0",
    "huggingface-hub>=0.23.0",
    "httpx>=0.25.0",
    "langchain-text-splitters>=0.0.1",
    "lightrag-hku>=1.0.0",
    "marker-pdf[full]>=1.10.0",
    "mineru[all]>=3.1.0",
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.2",
    "sqlalchemy[asyncio]>=2.0.23",
    "uvicorn[standard]>=0.24.0",
]
